force-app/main/default/objects/Utterance_Log__c.object
<CustomObject>
    <description>Tracks Utterances that Confused Bot</description>
    <fields>
        <fullName>Chat_Transcript__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chat Transcript</label>
        <referenceTo>LiveChatTranscript</referenceTo>
        <relationshipLabel>Utterance Logs</relationshipLabel>
        <relationshipName>Utterance_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentUtterance__c</fullName>
        <label>Current Utterance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_Version__c</fullName>
        <label>Deployment Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Utterance Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Chat_Transcript__c</columns>
        <columns>CurrentUtterance__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UT-{0000}</displayFormat>
        <label>Utterance Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Utterance Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>